ext/yuni/nany/tests/invalid/missing_brace2.ny
# This test has a trailing else clause, with no closing brace

function foo
{
	if true then
	{
		doSomething
	}
	else
	{
}

